--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1"
   }
 }
