--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongoose": "^8.16.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
